--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "Yann Thierry-Mieg",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "buffer": "^6.0.3",
     "cytoscape": "^3.29.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "sax": "^1.4.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "babel-loader": "^9.1.3"
+    "webpack-dev-server": "^5.0.4"
   }
 }
