--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "cytoscape": "^3.29.2",
+    "cytoscape-edgehandles": "^4.0.1",
     "express": "^4.19.2",
     "sax": "^1.4.1",
     "stream-browserify": "^3.0.0"
