--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "author": "Yann Thierry-Mieg",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "antlr4": "^4.13.1-patch-1",
     "buffer": "^6.0.3",
     "cytoscape": "^3.29.2",
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-edgehandles": "^4.0.1",
     "cytoscape-fcose": "^2.2.0",
     "express": "^4.19.2",
+    "monaco-editor": "^0.50.0",
     "sax": "^1.4.1",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
