--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
+    - name: Deploy antlr
+      run: pip install antlr4-tools
     - name: Build project
       run: npm install && npm run build
     - name: Deploy to GitHub Pages
