--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
