--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "antlr4": "^4.13.1-patch-1",
+    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4ts-cli": "^0.5.0-alpha.4",
+    "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "cytoscape": "^3.29.2",
     "cytoscape-dagre": "^2.5.0",
