--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cytoscape": "^3.21.4",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
