--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "@types/cytoscape": "^3.21.4",
+    "@types/cytoscape-dagre": "^2.3.3",
+    "@types/cytoscape-edgehandles": "^4.0.4",
+    "@types/cytoscape-fcose": "^2.2.4",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
