--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/cytoscape-dagre": "^2.3.3",
     "@types/cytoscape-edgehandles": "^4.0.4",
     "@types/cytoscape-fcose": "^2.2.4",
+    "@types/sax": "^1.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
